--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ footer {
     background-color: #f00; /* Add a background color */
     border: 2px solid #fff; /* Add a border */
     border-radius: 50%; /* Make it circular */
-    padding: 5px 5px; /* Add some padding */
+    padding: 5px 10px; /* Add some padding */
     cursor: pointer; /* Change the cursor to pointer */
 }
 
@@ -117,6 +117,7 @@ footer {
 .thumbnail {
     max-width: 150px;
     margin: 10px;
+    cursor: pointer;
 }
 
 /* High-Resolution Image Modal Styles */
