--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ footer {
 }
 
 .modal-content {
+    position: relative;
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
@@ -90,6 +91,9 @@ footer {
 }
 
 .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
     color: #fff; /* Change the color to white */
     float: right;
     font-size: 32px; /* Increase the font size */
@@ -107,6 +111,7 @@ footer {
     background-color: #c00; /* Darken the background color on hover/focus */
     border-color: #fff; /* Keep the border color white on hover/focus */
     text-decoration: none;
+    cursor: pointer;
 }
 
 .thumbnails {
@@ -118,7 +123,7 @@ footer {
 .thumbnail {
     max-width: 150px;
     margin: 10px;
-    cursor: pointer;
+    /*cursor: pointer;*/
 }
 
 /* High-Resolution Image Modal Styles */
